re PR c++/54216 (Missing diagnostic for ill-formed anonymous enum declarations)

/cp
2013-04-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54216
	* parser.c (cp_parser_enum_specifier): Check for empty
	anonymous enums and anonymous scoped enums.

/testsuite
2013-04-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54216
	* g++.dg/cpp0x/enum26.C: New.
	* g++.old-deja/g++.pt/mangle1.C: Adjust.

From-SVN: r197742